# clickhouse-native-snowflake-proxy

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
go-client-samples/: go.mod  go.sum  go_query_multi_data_type.go  insert_table.go  snowflake-version-user.go
src/: main.rs
